Fix empty kafka client config (#41)
* Fix empty kafka client config

* Add single access request endpoint

* Add single access request endpoint

* Add single access request endpoint

* Limit amount of activity logs returned

* Fix Google response status codes

* Fix Gitlab not found users

* Fix Gitlab not found users

* Fix Gitlab not found users

* Fix Gitlab not found users

* Fix Gitlab not found users
